--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -118,18 +118,21 @@
       ansible.builtin.set_fact:
         newly_created_pat: "{{ git_token }}"
 
-    - name: Create the Access Token for the Application in AAP
-      ansible.platform.token:
-        gateway_hostname: "{{ aap_hostname }}"
-        gateway_username: "{{ aap_username }}"
-        gateway_password: "{{ aap_password }}"
-        validate_certs: false
-        
-        # Link the token to the application
-        scope: "write"
-        description: "PAT for lab"
-        state: present
-      register: awx_token
+    - name: "Get the Authentication Token for the future requests"
+      ansible.builtin.uri:
+        url: "https://{{ aap_hostname }}/api/gateway/v1/tokens/"
+        user: "{{ aap_username }}"
+        password: "{{ aap_password }}"
+        method: POST
+        force_basic_auth: true
+        validate_certs: "{{ aap_validate_certs }}"
+        status_code: 201
+      register: authtoken_res
+
+    - name: "Set the oauth token to be used since now"
+      ansible.builtin.set_fact:
+        aap_token: "{{ authtoken_res.json.token }}"
+        aap_oauthtoken_url: "{{ authtoken_res.json.url }}"
 
     - name: ✅ Wait for the URL to be available (HTTP 200)
       ansible.builtin.uri:
@@ -141,11 +144,16 @@
         validate_certs: "{{aap_validate_certs}}" # Set to true if using proper SSL/TLS certificates
       register: aap_job_template
 
-    - name: Delete the Access Token for the Application in AAP
-      ansible.platform.token:
-        description: "PAT for lab"
-        state: absent
-      register: awx_token
+    - name: "Delete the Authentication Token used"
+      ansible.builtin.uri:
+        url: "https://{{ aap_hostname }}{{aap_oauthtoken_url }}"
+        user: "{{ aap_username }}"
+        password: "{{ aap_password }}"
+        method: DELETE
+        force_basic_auth: true
+        validate_certs: "{{ aap_validate_certs }}"
+        status_code: 204
+      when: aap_oauthtoken_url is defined
 
     - name: 4. Display Recovered Information
       ansible.builtin.debug:
