Change info webhook

--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -136,12 +136,13 @@
 
     - name: ✅ Wait for the URL to be available (HTTP 200)
       ansible.builtin.uri:
-        url: "https://{{aap_hostname}}/api/controller/v2/job_templates/?search={{job_Template_lifecycle| urlencode}}"
-        headers:
-          Authorization: "{{ aap_token }}"
-        method: GET
-        status_code: 200 # The desired HTTP status code
-        validate_certs: "{{aap_validate_certs}}" # Set to true if using proper SSL/TLS certificates
+        url: "https://{{aap_hostname}}/api/controller/v2/job_templates/?search={{job_Template_lifecycle| urlencode}}"method: GET
+        user: "{{ aap_username }}"
+        password: "{{ aap_password }}"
+        force_basic_auth: yes  # Required for basic auth
+        validate_certs: yes    # Set to 'no' if using self-signed certs (not recommended for production)
+        status_code: 200
+        return_content: yes
       register: aap_job_template
 
     - name: "Delete the Authentication Token used"
