--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -158,7 +158,7 @@
 
     - name: ✅ Wait for the URL to be available (HTTP 200)
       ansible.builtin.uri:
-        url: "https://{{aap_hostname}}/{{aap_job_template_content_results[0].related.webhook_key}}"
+        url: "https://{{aap_hostname}}{{aap_job_template_content_results[0].related.webhook_key}}"
         method: GET
         user: "{{ aap_username }}"
         password: "{{ aap_password }}"
