--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -46,10 +46,13 @@
     path_token: "{{ '/api/v2/tokens/' if is_awx else '/api/gateway/v1/tokens/' }}"
     path_job_teamplte: "{{ '/api/v2/job_templates/' if is_awx else '/api/controller/v2/job_templates/' }}"
 
-    aap_hostname: "{{ lookup('env', 'TOWER_HOST') | aap_hostname }}"
-    aap_username: "{{ lookup('env', 'TOWER_USERNAME') | aap_username }}"
-    aap_password: "{{ lookup('env', 'TOWER_PASSWORD') | aap_password }}"
-    aap_validate_certs: "{{ lookup('env', 'TOWER_VERIFY_SSL') | aap_validate_certs }}"
+    aap_username: "{{ lookup('env', 'CONTROLLER_USERNAME')}}"
+    aap_password: "{{ lookup('env', 'CONTROLLER_PASSWORD')}}"
+    aap_hostname: "{{ lookup('env', 'CONTROLLER_HOST')}}"
+    aap_validate_certs: "{{ lookup('env', 'CONTROLLER_VERIFY_SSL')}}"
+
+    job_Template_lifecycle: playbook_livecycle
+
   tasks:
 
     # =========================================================================
